--- a/resources/sass/partials/_index.scss
+++ b/resources/sass/partials/_index.scss
@@ -1,6 +1,7 @@
 .box-movie {
  display: flex;
  flex-direction: column;
+ align-items: center;
  padding: 40px;
  text-align: center;
   button {
@@ -16,5 +17,8 @@
          text-decoration: none;
          font-weight: bold;
        }
+  }
+  img {
+     max-width: 400px;
   }
 }
