--- a/resources/sass/partials/_index.scss
+++ b/resources/sass/partials/_index.scss
@@ -16,9 +16,11 @@
          color: #000;
          text-decoration: none;
          font-weight: bold;
+         font-family: 'Bangers', cursive;
        }
   }
   img {
      max-width: 400px;
+     padding: 30px 0;
   }
 }
