--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -5,7 +5,8 @@
      font-size: 40px;
    }
    p {
-     padding: 30px 0;
+     padding: 30px 80px;
+     line-height: 25px;
    }
    button {
     width: 200px;
