--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,8 +4,16 @@
   box-sizing: border-box;
 }
 
-.container {
+body {
   font-family: "Bangers", cursive;
+}
+
+h1 {
+  text-align: center;
+  font-size: 80px;
+}
+
+.container {
   width: 800px;
   margin: auto;
   display: flex;
@@ -21,21 +29,23 @@
   align-items: center;
   padding: 40px;
   text-align: center;
+  font-family: "Lily Script One", cursive;
 }
 .box-movie button {
   margin: auto;
-  max-width: 100px;
+  width: 240px;
   padding: 10px;
   margin-top: 15px;
   background-color: #f89200;
   border: 2px solid #000;
   border-radius: 10px;
+  font-size: 16px;
 }
 .box-movie button a {
   color: #000;
   text-decoration: none;
   font-weight: bold;
-  font-family: "Bangers", cursive;
+  font-family: "Lily Script One", cursive;
 }
 .box-movie img {
   max-width: 400px;
@@ -44,6 +54,7 @@
 
 .box-descr {
   text-align: center;
+  height: 100vh;
 }
 .box-descr h2 {
   line-height: 120px;
@@ -54,15 +65,17 @@
   line-height: 25px;
 }
 .box-descr button {
-  width: 200px;
+  width: 260px;
   margin: auto;
   padding: 30px;
   background-color: #1ff910;
   border-radius: 15px;
   border: 2px solid #000;
+  font-size: 18px;
 }
 .box-descr button a {
   color: #000;
   text-decoration: none;
   font-weight: bold;
+  font-family: "Lily Script One", cursive;
 }
