--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -1,5 +1,6 @@
 .box-descr {
  text-align: center;
+ height: 100vh;
    h2 {
      line-height: 120px;
      font-size: 40px;
@@ -9,16 +10,18 @@
      line-height: 25px;
    }
    button {
-    width: 200px;
+    width: 260px;
     margin: auto;
     padding: 30px;
     background-color: #1ff910;
     border-radius: 15px;
     border: 2px solid #000;
+    font-size: 18px;
       a {
          color: #000;
          text-decoration: none;
          font-weight: bold;
+         font-family: 'Lily Script One', cursive;
       }
    }
 }
