--- a/resources/sass/partials/_index.scss
+++ b/resources/sass/partials/_index.scss
@@ -6,12 +6,10 @@
  text-align: center;
  font-family: 'Lily Script One', cursive;
   button {
-     margin: auto;
+     @include buttons;
      width: 240px;
      padding:10px;
      margin-top: 15px;
-     background-color: #f89200;
-     border: 2px solid #000;
      border-radius: 10px;
      font-size: 16px;
        a {
