--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,12 @@
-@import 'partials/variables';
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
 @import 'partials/common';
 @import 'partials/index';
 @import 'partials/show';
